--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -2,126 +2,144 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    android:background="@android:color/holo_orange_light"
+    android:orientation="vertical"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="81dp">
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="182dp"
-        android:layout_height="51dp"
-        android:layout_marginEnd="1dp"
+        android:layout_width="368dp"
+        android:layout_height="48dp"
         android:background="@android:color/background_dark"
         android:text="Return to main menu"
         android:textColor="@android:color/background_light"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioButton5" />
 
     <RadioButton
         android:id="@+id/radioButton2"
-        android:layout_width="0dp"
+        android:layout_width="150dp"
         android:layout_height="50dp"
         android:background="@android:color/background_dark"
         android:text="Sound Off"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/radioButton4"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="80dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="66dp"
-        app:layout_constraintLeft_toLeftOf="@+id/radioButton4"
+        app:layout_constraintLeft_toRightOf="@+id/radioButton7"
+        app:layout_constraintBottom_toTopOf="@+id/radioButton4"
         app:layout_constraintTop_toTopOf="parent" />
 
     <RadioButton
         android:id="@+id/radioButton3"
-        android:layout_width="170dp"
-        android:layout_height="0dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:background="@android:color/background_dark"
         android:text="Music On"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/radioButton6"
-        android:layout_marginTop="19dp"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton7"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="21dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintRight_toLeftOf="@+id/radioButton4"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/radioButton5"
+        app:layout_constraintTop_toBottomOf="@+id/radioButton7" />
 
     <RadioButton
         android:id="@+id/radioButton4"
-        android:layout_width="0dp"
-        android:layout_height="47dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:background="@android:color/background_dark"
         android:text="Music Off"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/radioButton3"
         app:layout_constraintBottom_toTopOf="@+id/radioButton6"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        app:layout_constraintRight_toRightOf="@+id/radioButton6"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintLeft_toLeftOf="@+id/radioButton6" />
+        app:layout_constraintTop_toBottomOf="@+id/radioButton2" />
 
     <RadioButton
         android:id="@+id/radioButton5"
-        android:layout_width="0dp"
+        android:layout_width="150dp"
         android:layout_height="50dp"
         android:background="@android:color/background_dark"
         android:text="Help Tips On"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/radioButton3"
-        android:layout_marginTop="21dp"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton3"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/radioButton3" />
+        app:layout_constraintRight_toLeftOf="@+id/radioButton6"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/radioButton3" />
 
     <RadioButton
         android:id="@+id/radioButton6"
-        android:layout_width="190dp"
-        android:layout_height="53dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:background="@android:color/background_dark"
         android:text="Help Tips Off"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="44dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/radioButton5" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/radioButton5"
+        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/radioButton4" />
 
     <RadioButton
         android:id="@+id/radioButton7"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:background="@android:color/background_dark"
         android:text="Sound On"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/radioButton2"
-        app:layout_constraintRight_toRightOf="@+id/radioButton3"
-        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintRight_toLeftOf="@+id/radioButton2"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/radioButton2" />
+        app:layout_constraintBottom_toTopOf="@+id/radioButton3"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline"
+        app:layout_constraintGuide_begin="20dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="20dp" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="7dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@mipmap/banana" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="394dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="16dp"
+        android:contextClickable="false"
+        android:cursorVisible="false"
+        android:ems="10"
+        android:fontFamily="serif-monospace"
+        android:inputType="none"
+        android:selectAllOnFocus="false"
+        android:singleLine="false"
+        android:text="Settings"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/radioButton2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:clickable="false" />
 
 </android.support.constraint.ConstraintLayout>
