--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -28,15 +28,16 @@
         android:layout_width="363dp"
         android:layout_height="192dp"
         android:fontFamily="monospace"
+        android:lineSpacingExtra="18sp"
         android:text="Welcome to Magic Banana               Created By: Shyam Lingam                   Version: 2.0 Support Email: support@magicbanana.com"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/button6"
+        app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.523" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
