--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -7,7 +7,7 @@
     android:background="@android:color/holo_orange_light"
     android:orientation="vertical"
     tools:layout_editor_absoluteX="0dp"
-    tools:layout_editor_absoluteY="81dp">
+    tools:layout_editor_absoluteY="25dp">
 
     <Button
         android:id="@+id/button5"
@@ -16,10 +16,9 @@
         android:background="@android:color/background_dark"
         android:text="Return to main menu"
         android:textColor="@android:color/background_light"
+        tools:layout_editor_absoluteY="455dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton5" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <RadioButton
         android:id="@+id/radioButton2"
@@ -29,10 +28,9 @@
         android:text="Sound Off"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/radioButton7"
-        app:layout_constraintBottom_toTopOf="@+id/radioButton4"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="99dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <RadioButton
         android:id="@+id/radioButton3"
@@ -42,10 +40,9 @@
         android:text="Music On"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        app:layout_constraintRight_toLeftOf="@+id/radioButton4"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/radioButton5"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton7" />
+        tools:layout_editor_absoluteY="222dp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <RadioButton
         android:id="@+id/radioButton4"
@@ -55,10 +52,9 @@
         android:text="Music Off"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/radioButton3"
-        app:layout_constraintBottom_toTopOf="@+id/radioButton6"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton2" />
+        tools:layout_editor_absoluteY="222dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <RadioButton
         android:id="@+id/radioButton5"
@@ -68,10 +64,9 @@
         android:text="Help Tips On"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        app:layout_constraintRight_toLeftOf="@+id/radioButton6"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton3" />
+        tools:layout_editor_absoluteY="335dp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <RadioButton
         android:id="@+id/radioButton6"
@@ -81,23 +76,21 @@
         android:text="Help Tips Off"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/radioButton5"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton4" />
+        tools:layout_editor_absoluteY="335dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <RadioButton
-        android:id="@+id/radioButton7"
+        android:id="@+id/soundon"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:background="@android:color/background_dark"
         android:text="Sound On"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        app:layout_constraintRight_toLeftOf="@+id/radioButton2"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/radioButton3"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="99dp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -108,21 +101,10 @@
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="20dp" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="7dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@mipmap/banana" />
-
     <EditText
         android:id="@+id/editText2"
         android:layout_width="394dp"
         android:layout_height="47dp"
-        android:layout_marginTop="16dp"
         android:contextClickable="false"
         android:cursorVisible="false"
         android:ems="10"
@@ -135,12 +117,10 @@
         android:textIsSelectable="false"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/radioButton2"
-        app:layout_constraintHorizontal_bias="1.0"
+        tools:clickable="false"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:clickable="false" />
+        android:layout_marginTop="16dp" />
 
 </android.support.constraint.ConstraintLayout>
