--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_orange_light"
+    android:background="@drawable/main"
     tools:context="com.example.shyam.magicbanana.MainMenu">
 
     <Button
         android:id="@+id/button"
-        android:layout_width="291dp"
+        android:layout_width="200dp"
         android:layout_height="48dp"
-        android:layout_marginBottom="24dp"
-        android:background="@android:color/black"
+        android:layout_marginBottom="-9dp"
         android:text="Start Game"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toTopOf="@+id/button2"
@@ -24,27 +23,25 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="289dp"
+        android:layout_width="200dp"
         android:layout_height="48dp"
-        android:background="@android:color/background_dark"
         android:text="Settings"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.628"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintVertical_bias="0.501" />
+        tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="288dp"
+        android:layout_width="200dp"
         android:layout_height="0dp"
-        android:layout_marginTop="20dp"
-        android:background="@android:color/background_dark"
+        android:layout_marginTop="10dp"
         android:text="About"
         android:textColor="@android:color/background_light"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -52,15 +49,13 @@
         app:layout_constraintTop_toBottomOf="@+id/button2"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintHorizontal_bias="0.502" />
+        tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="287dp"
+        android:layout_width="200dp"
         android:layout_height="48dp"
-        android:layout_marginTop="26dp"
-        android:background="@android:color/background_dark"
+        android:layout_marginTop="9dp"
         android:onClick="clickexit"
         android:text="Exit Game"
         android:textColor="@android:color/background_light"
@@ -71,16 +66,6 @@
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="100dp"
-        android:layout_height="89dp"
-        app:srcCompat="@mipmap/banana"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp" />
-
     <EditText
         android:id="@+id/editText"
         android:layout_width="396dp"
@@ -89,16 +74,16 @@
         android:cursorVisible="false"
         android:ems="10"
         android:fontFamily="serif-monospace"
-        android:inputType="textPersonName"
+        android:inputType="text|textPersonName"
         android:text="Magic Banana"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        tools:clickable="false" />
+        tools:clickable="false"
+        android:layout_marginBottom="206dp" />
 
 
     
