--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -11,14 +11,23 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="48dp"
         android:background="@android:color/background_dark"
         android:text="Return to main menu"
         android:textColor="@android:color/background_light"
-        tools:layout_editor_absoluteY="455dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="70dp"
+        app:layout_constraintTop_toBottomOf="@+id/radioButton5"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="64dp" />
 
     <RadioButton
         android:id="@+id/radioButton2"
@@ -28,9 +37,12 @@
         android:text="Sound Off"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        tools:layout_editor_absoluteY="99dp"
         android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="99dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RadioButton
         android:id="@+id/radioButton3"
@@ -40,9 +52,12 @@
         android:text="Music On"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        tools:layout_editor_absoluteY="222dp"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="73dp"
+        app:layout_constraintTop_toBottomOf="@+id/soundon" />
 
     <RadioButton
         android:id="@+id/radioButton4"
@@ -52,9 +67,12 @@
         android:text="Music Off"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        tools:layout_editor_absoluteY="222dp"
         android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="73dp"
+        app:layout_constraintTop_toBottomOf="@+id/radioButton2" />
 
     <RadioButton
         android:id="@+id/radioButton5"
@@ -64,9 +82,12 @@
         android:text="Help Tips On"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        tools:layout_editor_absoluteY="335dp"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="63dp"
+        app:layout_constraintTop_toBottomOf="@+id/radioButton3" />
 
     <RadioButton
         android:id="@+id/radioButton6"
@@ -76,21 +97,28 @@
         android:text="Help Tips Off"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        tools:layout_editor_absoluteY="335dp"
         android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="63dp"
+        app:layout_constraintTop_toBottomOf="@+id/radioButton4" />
 
     <RadioButton
         android:id="@+id/soundon"
         android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_height="0dp"
         android:background="@android:color/background_dark"
         android:text="Sound On"
         android:textColor="@android:color/background_light"
         app:buttonTint="@android:color/background_light"
-        tools:layout_editor_absoluteY="99dp"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/radioButton2"
+        app:layout_constraintTop_toTopOf="@+id/radioButton2" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -103,7 +131,7 @@
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="394dp"
+        android:layout_width="0dp"
         android:layout_height="47dp"
         android:contextClickable="false"
         android:cursorVisible="false"
@@ -121,6 +149,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
 </android.support.constraint.ConstraintLayout>
