--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -13,8 +13,10 @@
         android:id="@+id/musicon"
         android:layout_width="159dp"
         android:layout_height="48dp"
-        android:text="Button On"
+        android:text="Music On"
         android:onClick="son"
+        android:backgroundTint="#000000"
+        android:textColor="#FFFF00"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,8 +30,10 @@
         android:id="@+id/musicoff"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:text="Button Off"
+        android:text="Music Off"
         android:onClick="soff"
+        android:backgroundTint="#000000"
+        android:textColor="#FFFF00"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="@+id/musicon"
@@ -43,7 +47,7 @@
         android:layout_height="63dp"
         android:background="@android:color/background_dark"
         android:text="Return to main menu"
-        android:textColor="@android:color/background_light"
+        android:textColor="#FFFF00"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
         tools:layout_constraintTop_creator="1"
