--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -13,7 +13,8 @@
         android:layout_height="48dp"
         android:layout_marginBottom="-9dp"
         android:text="Start Game"
-        android:textColor="@android:color/background_light"
+        android:backgroundTint="#FFFF00"
+        android:textColor="#808080"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -26,7 +27,8 @@
         android:layout_width="200dp"
         android:layout_height="48dp"
         android:text="Settings"
-        android:textColor="@android:color/background_light"
+        android:backgroundTint="#FFFF00"
+        android:textColor="#808080"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -43,7 +45,8 @@
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
         android:text="About"
-        android:textColor="@android:color/background_light"
+        android:backgroundTint="#FFFF00"
+        android:textColor="#808080"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2"
@@ -58,7 +61,8 @@
         android:layout_marginTop="9dp"
         android:onClick="clickexit"
         android:text="Exit Game"
-        android:textColor="@android:color/background_light"
+        android:backgroundTint="#FFFF00"
+        android:textColor="#808080"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button3"
