--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -38,6 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="Try Again"
+        android:backgroundTint="#FFFF00"
+        android:textColor="#808080"
         android:textAllCaps="false"
         android:onClick="tryAgain"
         />
